# ToggleUI

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ccld_ToggleUI.toml  headerlist.cmake  sourcelist.cmake  version.rc.in
data/SKSE/Plugins/ccld_ModFunctionMenu/Config/: Toggle UI.toml
data/SKSE/Plugins/ccld_ModFunctionMenu/Mod/Toggle UI/: Toggle Compass.toml  Toggle HUD - Compass.toml  Toggle HUD - Player Bar.toml  Toggle HUD - Subtitle.toml  Toggle Subtitle.toml  Toggle UI.toml
scripts/: gensrc.py
src/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  EventSink.cpp  EventSink.h  Events.cpp  Events.h  Function.cpp  Function.h  Hotkey.cpp  Hotkey.h  HotkeyManager.cpp  HotkeyManager.h  Main.cpp  PCH.h  cpp.hint
src/CLib/: Hook.h  Key.h
src/Util/: Hotkey.cpp  Hotkey.h  Singleton.h  TOML.h  Win.cpp  Win.h
